# Anarchy-Copilot

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.dev  Dockerfile.httpbin  Dockerfile.test  Makefile  PR.md  PR_VULN.md  README.md  TODO.md  __init__.py  activate_environment.sh  alembic.ini  anarchy_copilot.db  ca.crt  ca.key  check_db.py  database.py  dependencies.txt  docker-compose.test.yml  docker-compose.yml  install_dependencies.sh  install_recon_tools.py  logging.json  main.py  models.py  mypy.ini  package-lock.json  package.json  performance-budget.json  proxy.db  proxy_logs.txt  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-typing.txt  requirements.txt  run_tests.sh  setup.cfg  (+7 more)
.github/workflows/: disable-all.yml  (+7 more)
alembic/: env.py
anarchy-copilot/: .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.test  LICENSE  Makefile  PR.md  PR_VULN_TESTING.md  README.md  TODO.md  anarchy_copilot.db  check_installation.py  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start.sh
anarchy_copilot/: __init__.py  py.typed  version.py
api/: __init__.py  config.py  filter.py  filter_integration.py  health.py  main.py  proxy.py  websocket.py  websocket.py.bak
certs/: ca.crt  ca.key
data/: proxy.db
database/: __init__.py  base.py  session.py
docs/: traffic_analysis_architecture.md  type_checking.md
examples/: proxy_example.py  typed_proxy_usage.py  vulnerability_scan.py
frontend/: Dockerfile.frontend  install-test-deps.sh  install.sh  install_deps.sh  jest.config.js  jest.config.json  package-lock.json  package.json  setup.sh  tsconfig.json
models/: __init__.py  base.py  core.py  proxy.py  recon.py  vulnerability.py
proxy/: __init__.py  analysis.py  analysis_manager.py  analysis_rules.py  config.py  core.py  encoding.py  filter.py  instances.py  interceptor.py  main.py  py.typed  session.py  tls.py
recon_module/: __init__.py  database.py  models.py  orchestrator.py  py.typed  rate_limiter.py  recon_manager.py  scheduler.py
scripts/: ab_test_models.py  aggregate_alerts.py  alert_handlers.py  alert_throttling.py  analyze_alert_correlations.py  analyze_bootstrap.py  analyze_causal_patterns.py  analyze_counterfactuals.py  analyze_distributions.py  analyze_experiments.py  analyze_mixtures.py  analyze_sensitivity.py  analyze_throttling_stats.py  analyze_types.py  analyze_uncertainty.py  api-entrypoint.sh  check_history.py  check_perf_thresholds.py  check_performance_budget.py  check_sessions.py  check_tables.py  check_types.py  create_test_user.py  dev-entrypoint.sh  generate_and_trust_certs.sh  handle_performance_alerts.py  healthcheck.sh  monitor_performance.py  multi_variant_test.py  notify_test_alerts.py  predict_throttling_performance.py  process_perf_results.py  profiling_dashboard.py  proxy-entrypoint.sh  proxy_client.py  reset_db.sh  retrain_throttling_models.py  run_proxy_tests.py  run_type_tests.py  setup_test_env.sh  (+12 more)
stubs/: database.pyi
test-results/: junit.xml  report.html
tests/: README.md  benchmark_type_suggestions.py  conftest.py  mypy_reveal.ini  requirements-ml.txt  requirements-proxy-test.txt  requirements-test.txt  test_alert_throttling.py  test_alert_throttling_performance.py  test_filter.py  test_filter_e2e.py  test_filter_integration.py  test_ml_pipeline.py  test_ml_pipeline_failures.py  test_ml_pipeline_load.py  test_ml_pipeline_stress.py  test_performance_analysis.py  test_performance_analysis_failures.py  test_performance_analysis_stress.py  test_performance_profiling.py  test_proxy_connections.py  test_type_suggestions.py  test_type_suggestions_properties.py  test_types.py
typings/: bs4.pyi  pytest.pyi
vuln_module/: __init__.py  models.py  rate_limiter.py  vuln_manager.py
(+577 files in other folders)
