[metadata]
name = anarchy_copilot
version = 0.1.0
description = AI-powered bug bounty suite
author = Anarchy Copilot Team
author_email = info@anarchycopilot.org
url = https://github.com/anarchycopilot/anarchycopilot
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.68.0
    sqlalchemy>=1.4.0
    uvicorn>=0.15.0
    aiohttp>=3.8.0
    asyncio>=3.4.3
    typing_extensions>=4.0.0
    pydantic>=1.8.0

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-asyncio>=0.15.0
    pytest-timeout>=2.0.0
    pytest-cov>=2.12.0
    mypy>=0.910
    black>=21.0
    isort>=5.0.0
    flake8>=3.9.0
    aiofiles>=0.8.0
    PyYAML>=5.4.1
    types-PyYAML>=6.0.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
markers =
    asyncio: mark test as async test
    integration: mark test as integration test
    slow: mark test as slow running
asyncio_mode = auto
timeout = 300

[coverage:run]
source = anarchy_copilot
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    except ImportError:
ignore_errors = True
omit =
    tests/*
    setup.py

[mypy]
python_version = 3.8
warn_return_any = True
strict_optional = True
ignore_missing_imports = True
mypy_path = stubs
namespace_packages = True
explicit_package_bases = True
check_untyped_defs = True
no_implicit_optional = True

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203,W503
